crates/data-dict/tests/snapshots/validate__lint_dd007_range_type_missing_range.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd007-range-type-missing-range.yaml\")"
---
Error: [DD007] data-dict.yaml lint
    ╭─[ lint/dd007-range-type-missing-range.yaml:11:15 ]
    │
 11 │       - name: weight
    │               ───┬──  
    │                  ╰──── column `t.weight` has type `number(quantity)` but is missing the expected `range` property
────╯

Error: [DD007] data-dict.yaml lint
    ╭─[ lint/dd007-range-type-missing-range.yaml:14:15 ]
    │
 14 │       - name: recorded_at
    │               ─────┬─────  
    │                    ╰─────── column `t.recorded_at` has type `date` but is missing the expected `range` property
────╯
