crates/data-dict/tests/snapshots/validate__lint_dd008_range_on_string_type.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/dd008-range-on-string-type.yaml\")"
---
Error: [DD008] data-dict.yaml lint
    ╭─[ lint/dd008-range-on-string-type.yaml:12:15 ]
    │
 12 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has `range` but type `string` does not support it; `range` is only valid for `number(ordinal)`, `number(quantity)`, `date`, and `datetime`
────╯
